--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,10 +4,16 @@
         <title>my first website</title>
     </header>
     <body>
-        <h1>hello world!</h1>
+        <h1>Hello world!</h1>
         <p>Welcome to my first website.</p>
         <h2>Web Security</h2>
         <p id="web-security-question">How would you advise a potenttial client to secure his/her website from web security attacks? Note: the word count for your answer should not be greater than 250 words</p>
-        <p id="web-security-answer"></p>
+        <p id="web-security-answer">An important factor to be consider is to ensure that the data we accept in the site is properly verified and doesn't contain any mallicious links that can corrupt the web site's data.
+
+            Clients should also make sure to use strong and unique passwords that are difficult to be crack by hackers, possibly clients should ensure a two factor authentication when signing into their account.
+
+            Another security procedure will be to implement automatic user timeout so as to protect users account and data as well ensuring the rightful user is the one workig in their account.
+
+            The website should be well secure with HTTPS for this ensures safe transfer of data files and secure communication within the web site network. </p>
     </body>
 </html>
