--- a/index.html/index.html
+++ b/index.html/index.html
@@ -14,6 +14,12 @@
 
             Another security procedure will be to implement automatic user timeout so as to protect users account and data as well ensuring the rightful user is the one workig in their account.
 
-            The website should be well secure with HTTPS for this ensures safe transfer of data files and secure communication within the web site network. </p>
+            The website should be well secure with HTTPS for this ensures safe transfer of data files and secure communication within the web site network.
+
+            The web site should regularly backup its data to secure important data and keep them away from hackers.
+
+            Web site owner can as well employ a white hat hacker to help find all the possible security risks on their web site and give possible ideas on fixing the security treats.
+        
+        </p>
     </body>
 </html>
