--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
             The web site should regularly backup its data to secure important data and keep them away from hackers.
 
-            Web site owner can as well employ a white hat hacker to help find all the possible security risks on their web site and give possible ideas on fixing the security treats.
-        
-        </p>
+            Web site owner can as well employ a white hat hacker to help find all the possible security risks on their web site and give possible ideas on fixing the security treats.</p>
     </body>
 </html>
